<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="shuffle_title">随机模式</string>
    <string name="repeat_title">重复模式</string>
    <string name="music_now_playing">正在播放</string>

    <string name="locked">已锁定</string>
    <string name="unlocked">已解锁</string>
    <string name="surface_best_fit">最为合适</string>
    <string name="surface_fit_screen">适合屏幕</string>
    <string name="surface_fill">拉伸填充</string>
    <string name="surface_original">居中</string>

    <string name="resume_from_position">从上次播放到的位置继续</string>
    <string name="confirm_resume">是否从上次播放到的位置继续播放？</string>
    <string name="confirm_resume_title">确认是否继续播放</string>
    <string name="confirm_resume_summary">若启用，在视频可以从上次播放到的位置继续播放时，将会征求您的意见</string>
    <string name="play_from_start">从头播放</string>

    <string name="back_quit_lock">再次按下“返回”可退出视频播放</string>
    <string name="error_message_is">错误消息为 (请在汇报问题时附上这些内容):\n</string>
    <string name="encountered_error_title">回放错误</string>
    <string name="encountered_error_message">VLC 处理该媒体时发生错误。\n请尝试刷新媒体库。</string>

    <string name="volume">音量</string>
    <string name="sound_on">声音开启</string>
    <string name="sound_off">声音关闭</string>
    <string name="brightness">亮度</string>

    <string name="unseekable_stream">播放时不支持定位的流</string>

    <string name="DM_Vod_Toast_Key_Back_Quit">Click again to exit the player</string>
    <string name="DM_Srt_loading">Loading…</string>
    <string name="DM_Srt_close">Subtitles are off.</string>
    <string name="DM_Subtitle">Subtitles</string>
    <string name="DM_Subtitle_place">Subtitle Position</string>
    <string name="DM_Subtitle_up">Top</string>
    <string name="DM_Subtitle_down">Bottom</string>
    <string name="DM_Subtitle_size">Font size</string>
    <string name="DM_Srt_no_file">No available subtitles.</string>

</resources>